# Bot_WB_Test_Task

./: .gitignore  README.md  docker-compose.yml  example.env  nginx.conf  pyproject.toml
app/: Dockerfile  main.py  settings.py
app/engines/: __init__.py  postgres_storage.py  wb_api_client.py
app/models/: base.py  wildberries.py
app/repositories/: __init__.py  wildberries.py
app/routers/: __init__.py  auth.py  wildberries.py
app/schemes/: __init__.py  auth.py  wildberries.py
app/services/: __init__.py  auth.py  wildberries.py
postgres/migrations/: 001_create_wildberries_product_table.sql
tg_bot/: Dockerfile  base.py  main.py  settings.py  state.py
tg_bot/facades/: __init__.py  wildberries.py
tg_bot/handlers/: wildberries.py
tg_bot/routers/: __init__.py  commands.py  common.py
tg_bot/utilities/: message_editor.py
